# sensorimotor_checker

./: README.md  pyproject.toml
src/sensorimotor_checker/: hw1_tests.py  hw2_tests.py
