[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensorimotor_checker"
version = "0.0.9"
authors = [
  { name = "Nishant Abhangi", email="abhangin@mit.edu"},
  { name="Anika Cheerla", email="acheerla@mit.edu" },
  { name="Sathwik Karnik", email="skarnik2012@gmail.com" },
]
description = "Checker for 6.8200 psets"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
